slight styling mods

--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
 	<br><br>
 <div id="nord">
 	<img src="assets/images/nord.JPG" alt="nord" class="img-circle">
+	<p>Nord</p>
 </div>
 
 	<div id="high-elf">
 		<img src="assets/images/high-elf.JPG" alt="high-elf" class="img-circle">
+		<p>High Elf</p>
 	</div>
 
 <div id="khajit">
 	<img src="assets/images/khajit.JPG" alt="khajit" class="img-circle">
+	<p>Khajit</p>
 </div>	
 
 	<div id="orc">
 		<img src="assets/images/orc.JPG" alt="orc" class="img-circle">
+		<p>orc</p>
 	</div>
 
 <div class="container">
