character buttons added

--- a/index.html
+++ b/index.html
@@ -23,26 +23,39 @@
 <header>Battle for Skyrim</header>
 
 	<h1>Choose Your Fighter</h1>
+
 	<br><br>
-<div id="nord">
-	<img src="assets/images/nord.JPG" alt="nord" class="img-circle">
-	<p>Nord</p>
-</div>
 
-	<div id="high-elf">
-		<img src="assets/images/high-elf.JPG" alt="high-elf" class="img-circle">
-		<p>High Elf</p>
+	<div id="nord">
+		<button class="img-circle"><img src="assets/images/nord.JPG" alt="nord" class="img-circle"></button>
+
+		<p>Nord</p>
+
 	</div>
 
-<div id="khajit">
-	<img src="assets/images/khajit.JPG" alt="khajit" class="img-circle">
-	<p>Khajit</p>
-</div>	
+		<div id="high-elf">
+			<button class="img-circle"><img src="assets/images/high-elf.JPG" alt="high-elf" class="img-circle"></button>
 
-	<div id="orc">
-		<img src="assets/images/orc.JPG" alt="orc" class="img-circle">
-		<p>orc</p>
-	</div>
+			<p>High Elf</p>
+
+		</div>
+
+			<div id="khajit">
+
+				<button class="img-circle"><img src="assets/images/khajit.JPG" alt="khajit" class="img-circle"></button>
+
+				<p>Khajit</p>
+
+			</div>	
+
+		<div id="orc">
+			<button class="img-circle"><img src="assets/images/orc.JPG" alt="orc" class="img-circle"></button>
+
+			<p>orc</p>
+
+		</div>
+
+
 
 <div class="container">
 
