--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
 	<meta charset="UTF-8">
-	<title>RPG Game</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>RPG Game</title>
+
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <link href="https://fonts.googleapis.com/css?family=Uncial+Antiqua" rel="stylesheet">
 
@@ -20,6 +24,7 @@
 </head>
 
 <body>
+
 <header>Battle for Skyrim</header>
 
 	<h1>Choose Your Fighter</h1>
@@ -40,15 +45,16 @@
 
 		</div>
 
-			<div id="khajit">
+	<div id="khajit">
 
-				<button class="img-circle"><img src="assets/images/khajit.JPG" alt="khajit" class="img-circle"></button>
+		<button class="img-circle"><img src="assets/images/khajit.JPG" alt="khajit" class="img-circle"></button>
 
-				<p>Khajit</p>
+		<p>Khajit</p>
 
-			</div>	
+	</div>	
 
 		<div id="orc">
+
 			<button class="img-circle"><img src="assets/images/orc.JPG" alt="orc" class="img-circle"></button>
 
 			<p>orc</p>
@@ -64,17 +70,10 @@
 	<button type="button" class="btn btn-danger">ATTACK</button>
 
 </div>
-
-
-
-
-<script type="text/javascript" src="assets/javascript/game.js"></script>
-
-
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </body>
 
