--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <header>Battle for Skyrim</header>
 
-	<h1>Choose Your Fighter</h1>
+	<h1>Fighters:</h1>
 
 	<br><br>
 
@@ -61,7 +61,7 @@
 
 		</div>
 
-
+<div class="battlefield-left"></div>
 
 <div class="container">
 
