character selection semi-working

--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 
 	<h1>Fighters:</h1>
 
-	<br><br>
-
 	<div id="nord">
 		<button class="img-circle"><img src="assets/images/nord.JPG" alt="nord" class="img-circle"></button>
 
@@ -61,15 +59,17 @@
 
 		</div>
 
-<div class="battlefield-left"></div>
+<div class="container"></div>
 
-<div class="container">
 
-	<h1>Click Attack to Join the Battle</h1>
+
+
+	<h1>Click Attack to Begin the Battle</h1>
 	
 	<button type="button" class="btn btn-danger">ATTACK</button>
 
-</div>
+
+
 
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
