--- a/index.html
+++ b/index.html
@@ -59,17 +59,42 @@
 
 		</div>
 
-<div class="container"></div>
+
+
+<div class="container">
+			
+				<div class = "col-xs-12 col-sm-6" id = "gate">
+					<div class = "row">
+						<div class = "col-xs-12" id = "tracking">
+							<p class="h2" id="won">Wins: 0</p>
+							<p class="h2" id="lost">Loses: 0</p>
+							<button type="replay" class="btn btn-danger text-center" id="newGame">Play Again</button>
+						</div>
+						<div id = "clean">
+							<div class = "row center-block" id = "choose">
+							</div>
+						</div>
+					</div>
+				</div>
 
 
 
 
-	<h1>Click Attack to Begin the Battle</h1>
-	
-	<button type="button" class="btn btn-danger">ATTACK</button>
 
-
-
+<div class = "col-xs-12 col-sm-6" id="fight">
+					<div class = "row" id= "clean-up">
+						<div class = "col-xs-12" id ="player1"></div>
+					</div>
+					<div class = "row" id = "cleaner">
+						<div class = "col-xs-12" id = "vs" ></div>
+					</div>
+					<div class = "row" id= "cleaning">
+						<div class = "col-xs-12" id = "enemy"></div>
+					</div>
+					<div class= "row">
+						<h3 id = "messages">Click on two warriors to start the game.</h3>
+					</div>
+</div>
 
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
